# riboscope

./: .gitattributes  .gitignore  01_check_gpu.py  02_smoke_test_rnafm.py  03_extract_activations.py  04_train_sae.py  05_inspect_features.py  06_fetch_rfam_sequences.py  07_extract_activations_big.py  08_train_sae_big.py  09_inspect_features_big.py  10_extract_erniarna.py  10_extract_omnigenome.py  11_extract_rinalmo.py  11_extract_rnamsm.py  12_cross_model_agreement.py  13_linear_probe_family.py  14_family_geometry_diagnostic.py  15_per_layer_rank_scan.py  16_msa_geometry_scan.py  17_extract_rnamsm_msa.py  18_prep_msa_acts.py  19_extract_rnamsm_single_subset.py  20_fetch_disease_lncrna.py  21_scan_disease_rna.py  22_fetch_snodb.py  23_extract_snodb_features.py  24_snodb_functional_axis.py  25_snodb_confound_control.py  26_snodb_grouped_cv.py  27_snodb_orphan_nominate.py  28_snodb_orphan_nominate_v2.py  29_fix_validate_ernierna.py  31_cross_model_snorna_agreement.py  32_snodb_rfam_coverage.py  33_build_snorna_msa.py  34_extract_snorna_rnamsm_msa.py  35_snorna_rnamsm_features.py  36_three_model_panel.py  37_snorna_mechanism.py  (+40 more)
outputs_mirror/: benchmark_combined.json  benchmark_localization.json  benchmark_mito.json  cross_model_agreement.broken_rnamsm.json  cross_model_agreement.json  cross_model_connections_lengthcontrolled.json  cross_model_surprising_connections.json  disease_recon_erniarna.json  disease_recon_rnafm.json  disease_rna_hotspots.json  disease_scan_rnafm.json  disease_validation_summary.json  family_geometry_diagnostic.json  inspection_big_layer6_v1.json  inspection_big_layer6_v2.json  inspection_big_layer6_v3.json  inspection_erniarna_layer6_v1.json  inspection_erniarna_layer6_v3.json  inspection_rnamsm_layer6_top30.json  inspection_rnamsm_layer6_v2.json  inspection_rnamsm_layer6_v3.json  inspection_rnamsm_msa_layer8_v1.json  inspection_rnamsm_single_layer8_v1.json  ism_criticality_erniarna.json  ism_criticality_rnafm.json  ism_criticality_rnamsm.json  linear_probe_family.json  mechanism_u4u6.json  msa_geometry_scan.json  pathogenic_enrichment.json  per_layer_rank_scan.json  plasmodium_feasibility_gate.json  plasmodium_ncrna_manifest.json  plasmodium_snorna_scores.json  position_variance_report.json  sae_big_layer6_v1_history.json  sae_big_layer6_v2_history.json  sae_big_layer6_v3_history.json  sae_erniarna_layer6_v1_history.json  sae_erniarna_layer6_v3_history.json  (+23 more)
sequences/: test_rnas.fasta
